RESOLVED FIXED208765
[GPUP] LayoutTest debug assertion crashes: InitDataRegistry::registerInitDataType() called mulitple times with same type
https://bugs.webkit.org/show_bug.cgi?id=208765
Summary [GPUP] LayoutTest debug assertion crashes: InitDataRegistry::registerInitData...
Jer Noble
Reported 2020-03-07 09:59:46 PST
[GPUP] LayoutTest debug assertion crashes: InitDataRegistry::registerInitDataType() called mulitple times with same type
Attachments
Patch (2.45 KB, patch)
2020-03-07 10:01 PST, Jer Noble
no flags
Jer Noble
Comment 1 2020-03-07 10:01:58 PST
Darin Adler
Comment 2 2020-03-07 12:41:42 PST
Comment on attachment 392863 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=392863&action=review > Source/WebCore/platform/graphics/avfoundation/CDMFairPlayStreaming.cpp:220 > + static std::once_flag onceFlag; > + std::call_once(onceFlag, [] { For any one code change, seems OK to use std::call_once to avoid calling multiple times, even when the code isn’t safe to use from multiple threads. But since std::call_once is the thread-safe, more-expensive way of doing it, it might be slight overkill. Not sure what our overall project strategy should be for such things.
WebKit Commit Bot
Comment 3 2020-03-07 20:38:27 PST
Comment on attachment 392863 [details] Patch Clearing flags on attachment: 392863 Committed r258099: <https://trac.webkit.org/changeset/258099>
WebKit Commit Bot
Comment 4 2020-03-07 20:38:29 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2020-03-07 20:39:19 PST
Note You need to log in before you can comment on or make changes to this bug.