[GPUP] LayoutTest debug assertion crashes: InitDataRegistry::registerInitDataType() called mulitple times with same type https://bugs.webkit.org/show_bug.cgi?id=208765

Reviewed by Simon Fraser.

Wrap calls to registerInitDataType() in a std::call_once, to ensure it's not called muliple times when
platformRegisterFactories() is called multiple times.

* platform/graphics/avfoundation/CDMFairPlayStreaming.cpp:
(WebCore::CDMFactory::platformRegisterFactories):


Canonical link: https://commits.webkit.org/221708@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258099 268f45cc-cd09-0410-ab3c-d52691b4dbfc